Bug 154854 - preview max-file size is not used although displayed in settings
Summary: preview max-file size is not used although displayed in settings
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 16.12.2
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-12-30 13:38 UTC by S. Burmeister
Modified: 2008-01-05 23:57 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description S. Burmeister 2007-12-30 13:38:26 UTC
Version:            (using KDE Devel)
Installed from:    Compiled sources
OS:                Linux

If you start with a clean .kde4 dolphin does not show previews for pictures >1 MB. If you have a look at the settings the defaul file-size is 5 MB, so it should work.

If one alters the value from 5 to e.g. 4 it suddenly works.
Comment 1 Peter Penz 2008-01-05 23:57:05 UTC
SVN commit 757802 by ppenz:

Increase default preview size from 1 MB to 5 MB. TODO: it would be nice if PreviewJob would provide a static getter method for accessing the default size, so that applications like Dolphin - which allow to change the size - know the initial value.

BUG: 154854
CCMAIL: faure@kde.org

 M  +1 -1      previewjob.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=757802