Increase default preview size from 1 MB to 5 MB. TODO: it would be nice if PreviewJob would provide a static getter method for accessing the default size, so that applications like Dolphin - which allow to change the size - know the initial value.

BUG: 154854
CCMAIL: faure@kde.org

svn path=/trunk/KDE/kdelibs/; revision=757802